--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettify": "prettier --write ."
   },
   "dependencies": {
+    "@styled-icons/fluentui-system-filled": "^10.47.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
